# mantyl

./: .clang-format  .gitignore  .gitmodules  .pyre_configuration  ASSEMBLY.md  BUILD.md  README.md  components.md  esp_util.h  nets.txt  oukey.ino  todo.txt
cad/: README.md  auto_update.py  blender.py  cad.py  dev.py  export_all.py  export_stl.py  generate_stl.py  keyboard.py  left.py  left_shell.py  left_thumb_underlay.py  left_underlay.py  main.py  monitor_external_script.py  openscad.py  oukey.py  oukey2.py  right.py  right_full.py  right_shell.py  right_thumb_underlay.py  right_underlay.py  sx1509_holder.py  test.py
cad/bcad/: blender_util.py  cad.py
cad/mantyl/: __init__.py  auto_update.py  blender_util.py  cad.py  cover.py  dev.py  foot.py  i2c_conn.py  kbd_halves.py  kbd_middle.py  key_socket_holder.py  keyboard.py  main.py  numpad.py  oled_holder.py  screw_holes.py  soc.py  sx1509_holder.py  testing.py  usb_cutout.py  wrist_rest.py
cad/old/: keyboard.py  openscad.py
doc/: WIRING.md  assembly.md  components.md  concurrency.md  display.md  firmware.md  keycaps.md  nets.txt  v2_key_matrix.txt  wiring.md
kicad/: .gitignore  export.py  mantyl.kicad_sym  todo.txt
kicad/esp32s3/: esp32.kicad_sch  esp32s3.kicad_pro  esp32s3.kicad_sch  fp-info-cache  usb.kicad_sch
kicad/esp32s3/meta/: info.html
kicad/mantyl.pretty/: ESP32-S3-DevKitC.kicad_mod  ESP32-S3-WROOM-1.kicad_mod  ESP32-S3-WROOM-1U.kicad_mod  GT-USB-7090x.kicad_mod  Kailh_socket_MX_platemount.kicad_mod  SK6812-MINI-E.kicad_mod  SSD1306_OLED-0.91-128x32_Back_Mount.kicad_mod  SSD1306_OLED-0.91-128x32_Folded.kicad_mod  SSD1306_OLED-0.91-128x32_Front_Mount.kicad_mod
kicad/v2_controller/: esp32.kicad_sch  fp-info-cache  gen_layout.py  keys.kicad_sch  layout.yaml  leds.kicad_sch  oled.kicad_sch  usb.kicad_sch  v2_controller.jlcpcb.yaml  v2_controller.kicad_pcb  v2_controller.kicad_prl  v2_controller.kicad_pro  v2_controller.kicad_sch
kicad/v2_key_matrix/: v2_key_matrix.kicad_prl  v2_key_matrix.kicad_sch
kicad/v2_numpad/: cp2102n.kicad_sch  esp32.kicad_sch  fp-info-cache  fp-lib-table  numpad.kicad_sch  sym-lib-table  v2_numpad.kicad_pcb  v2_numpad.kicad_prl  v2_numpad.kicad_pro  v2_numpad.kicad_sch
old-arduino/: mantyl.ino
old-arduino/src/: App.cpp  Display.cpp  SSD1306Canvas.h  SX1509Keypad.cpp  SX1509Keypad.h  esp_util.h  usb_hid_keyboard.h
src/: .gitignore  App.cpp  App.h  CMakeLists.txt  Display.cpp  Display.h  Layout.cpp  Layout.h  README.md  SD1306Canvas.cpp  SD1306Canvas.h  SSD1306Canvas.cpp  build_all.sh  literals.h  sdkconfig  sdkconfig.defaults  usb_hid_keyboard.h
src/components/mantyl/: CMakeLists.txt
src/components/mantyl/keyboard/: Keymap.h  KeymapDB.cpp  Keypad.h
src/components/mantyl/ui/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  UI.cpp  UI.h  UIMode.h
src/components/mantyl/ui/anim/: Anim.h  CompositeAnim.h
src/components/mantyl_usb/: CMakeLists.txt  CtrlInTransfer.cpp  CtrlOutTransfer.cpp  Esp32UsbDevice.cpp  StaticDescriptorMap.cpp  UsbDescriptorMap.cpp  UsbDevice.cpp
src/components/mantyl_usb/include/mantyl_usb/: CtrlInTransfer.h  CtrlOutTransfer.h  Descriptors.h  Esp32UsbDevice.h  StaticDescriptorMap.h  StaticDescriptorUtils.h  UsbDescriptorMap.h  UsbDevice.h  hid.h  usb_types.h
src/components/tinyusb/: CMakeLists.txt
src/components/tinyusb/include/: tusb_config.h
src/main/: App.cpp  App.h  CMakeLists.txt  CompositeAnim.h  ConstantAnim.h  Kconfig.projbuild  Keyboard.cpp  Keyboard.h  Keymap.cpp  Keymap.h  KeymapDB.cpp  KeymapDB.h  Keypad.cpp  Keypad.h  LinearAnim.h  UI.cpp  UI.h  UsbDevice.cpp  UsbDevice.h  config.h  main.cpp
src/main/keyboard/: Keyboard.cpp  Keyboard.h  KeymapDB.cpp  KeymapDB.h  Keypad.cpp
src/main/ui/: MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  UI.cpp  UI.h  UIMode.cpp  UIMode.h
src/main/ui/anim/: ConstantAnim.h  LinearAnim.h
src/main/usb/: Esp32UsbDevice.cpp  Esp32UsbDevice.h  UsbDescriptorMap.cpp  UsbDevice.cpp  UsbDevice.h  hid.h  usb_types.h
src/test/: CMakeLists.txt  sdkconfig.defaults
src/test/main/: main.cpp  (+3 more)
(+59 files in other folders)
